fix(style): fix space/prject card overflow + disable 'view' button on project card when no models

--- a/src/components/specific/projects/project-card/ProjectCard.scss
+++ b/src/components/specific/projects/project-card/ProjectCard.scss
@@ -9,7 +9,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: visible;
     transition-duration: 0.35s;
 
     .project-card__action-bar {
